# LoctekMotion_IoT

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  semver.yaml
.github/workflows/: build-and-publish.yaml  lint.yaml  publish.yaml  test.yaml  validate-packages.yaml
archive/arduino/: README.md  flexispot_e8.ino  flexispot_ek5.ino  height_demo
archive/esphome/: Flexispot_E7_MQTT_control.yaml  desk_height_sensor.h  desk_keypad.h  flexispot_e5b.yaml  flexispot_e5b_esp32.yaml  flexispot_e6.yaml  flexispot_ek5.yaml  secrets.yaml
archive/raspberry-pi/: flexispot.py
components/loctekmotion_desk_command/: __init__.py  desk_command_sensor.cpp  desk_command_sensor.h  sensor.py
components/loctekmotion_desk_height/: __init__.py  desk_height_sensor.cpp  desk_height_sensor.h  sensor.py
images/passthrough-case/: flexispot-esp-case_1_flexispot-passthrough-lid.stl  flexispot-esp-case_1_flexispot-passthrough.stl  flexispot-passthrough-esp-case.f3d
tests/: office-desk-esp32-passthrough.yaml  office-desk-esp32.yaml  office-desk-esp8266-passthrough.yaml  office-desk-esp8266.yaml
